--- a/demo/app.json
+++ b/demo/app.json
@@ -1,13 +1,14 @@
 {
   "pages":[
+    "pages/lottery/lottery",
     "pages/index/index",
     "pages/logs/logs"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#e84118",
+    "navigationBarTitleText": "抽奖吧",
+    "navigationBarTextStyle":"white"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
